Found and fixed the css property that was making the text shift up when a new line was created on the p element in the OpeningText

--- a/src/Pages/Home/HiMyNameIs.css
+++ b/src/Pages/Home/HiMyNameIs.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
     
 }
 .OpeningTextDiv p{
@@ -14,13 +13,13 @@
 }
 
 
-@media (min-aspect-ratio: 5/3) {
+@media (max-aspect-ratio: 4/4) {
     .OpeningTextDiv{
         flex: 80%;
         padding:1em;
     }
   }
-  @media (max-aspect-ratio: 5/3) {
+  @media (max-aspect-ratio: 4/4) {
     .OpeningTextDiv{
         flex: 50%;
         padding:1em;
