--- a/src/Pages/Home/HomePage.css
+++ b/src/Pages/Home/HomePage.css
@@ -8,7 +8,7 @@
   
 
 
-  @media (min-aspect-ratio: 5/4) {
+  @media (min-aspect-ratio: 4/4) {
     .Opening{
       margin-top: calc(10px + 20vmin);
       flex-direction: row;
@@ -18,11 +18,12 @@
     }
   }
 
-  @media (max-aspect-ratio: 5/4) {
+  @media (max-aspect-ratio: 4/4) {
     .Opening{
+      height: 90vh;
       flex-direction: column;
       justify-content: space-between;
-      align-content: space-between;
+      align-content: space-around;
 
 
     }
